2010-12-15  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/common/bundle.py:
	* flumotion/common/registry.py:
	* flumotion/manager/manager.py:
	* flumotion/test/test_manager_manager.py:
	Manager has to rebuild the BundlerBasket when the registry has been
	updated. This prevents asking for a bundle that has been found in the
	recently updated Registry but it is not available in the outdated
	BundlerBasket.

2010-12-01  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Julien Le Goff

	* flumotion/component/consumers/disker/disker.py:
	* flumotion/component/consumers/disker/disker.xml:
	Add a property to set the overlap time between files.
	mutltfdsink doesn't keep enough buffers in it's internal queue and to sink
	in the last keyframe this value should be equivalent to the maximum
	keyframe distance.
	Using the 'time-min' property in multifdsink would be another solution, but
	for mpeg-ts streams with many buffers in between keyframes it takes up to
	a 100% use of the cpu finding the sync point

2010-12-01  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Julien Le Goff

	* flumotion/component/consumers/disker/disker.py:
	Fix typo

2010-12-01  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/component/consumers/disker/disker.xml:
	Document better the sync-on-tdt property

2010-12-01  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/component/consumers/disker/disker.py:
	Remove unused method

2010-11-29  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/component/consumers/disker/disker.py:
	Make sure we have the right values in multifdsink's client
	stats to write the index

2010-11-29  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/component/consumers/disker/disker.py: